# dianzibianzhong

./: FRONTEND_DEV_DOC.docx  FRONTEND_DEV_DOC.md  PROJECT_OVERVIEW.md  README.md  prd_extract.md
bianzhong_ninja_copy/: analysis_options.yaml
bianzhong_ninja_copy/lib/: main.dart
bianzhong_ninja_copy/lib/models/: app_demo_mode.dart  calibration_state.dart  latency_metrics.dart  vision_stick_frame.dart
bianzhong_ninja_copy/lib/providers/: app_provider.dart
bianzhong_ninja_copy/lib/screens/: calibration_wizard_screen.dart  (+4 more)
bianzhong_ninja_copy/test/: vision_strike_detector_test.dart
bianzhong_ninja_copy/third_party_esp_blufi_for_flutter/: README.md
bianzhong_ninja_copy/tools/: mock_stability_probe.py  mock_vision_server.py  requirements.txt  vision_tracking_server.py
bianzhong_ninja_copy/windows/: CMakeLists.txt
env_backup/: machine_path_20260709_184600.txt  optimized_user_path_preview.txt  restore_user_path.ps1
new_version/: PRD.md  USER_MANUAL.docx  USER_MANUAL.md  md2doc.py
new_version/bianzhong_hammer_uart_shtp/: CMakeLists.txt  FLASH_INSTRUCTIONS.md  README.md  build.sh  config_wifi_tplink.sh  monitor_esp32.sh  partitions.csv  sdkconfig.defaults  sdkconfig.old  test_usb_config.sh
new_version/bianzhong_hammer_uart_shtp/main/: CMakeLists.txt
new_version/bianzhong_ninja_20260712_changes/: 迁移说明.txt
old_version/: 6a4e4d78e88f1c6adcf0dad4_electronic-bianzhong-prd-v1(1).docx  prd_plain.txt
old_version/bianzhong_ninja_copy/: pubspec.yaml
old_version/env_backup/: optimized_user_path_oneline.txt  removed_user_path.txt  user_path_20260709_184600.txt
(+107 files in other folders)
